# sadviser

./: .gitignore  CLAUDE.md  README.md  main.py  prd.md  preview.html  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: deploy.yml  test.yml
calculation/ai/: feature_selector.py
calculation/backtest/: backtest_engine.py  base_backtest.py  normal_backtest.py  performance_metrics.py  result_analyzer.py  visualization.py
calculation/indicators/: base_indicator.py  custom_indicators.py  trend_indicators.py  (+2 more)
config/: base.py  dev.py  prod.py  test.py
docs/: API_INTERFACE_CHECK.md  FRONTEND_API_MIGRATION.md  FRONTEND_UI_IMPROVEMENTS.md  README.md  ROUTES.md  TASK_API_IMPLEMENTATION.md  introduction-dev.md  回测模块设计思路与功能说明.md
frontend/: STYLE_GUIDE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
rest/: sina.http
scripts/: deploy.sh  init_db.py  sync_historical_data.py  validate_strategies.py
service/: REFACTORING.md  REFACTORING_GUIDE.md  database.py  main.py
sql/: create_tables.sql
tests/: README.md  check_frontend_apis.py  conftest.py  test_akshare.py  test_annotated.py  test_backtest.py  test_crawler_akshare.py  test_crawler_sina.py  test_crawler_tushare.py  test_crawler_websocket.py  test_datetime.py  test_fastapi_depends.py  test_fastapi_depends_simple.py  test_postgres_storage.py  test_refactored_api.py  test_routes_fast.py  test_simple_logging.py  test_sina_stock.py  test_stock_api_routes.py  test_strategies.py  test_task_api.py  test_trend_indicators.py  test_unified_logging.py  verify_routes.py
utils/: akshare_api.py  custom_logger.py
(+105 files in other folders)
